add search function and ansiget page

--- a/templates/index.html
+++ b/templates/index.html
@@ -214,9 +214,9 @@
 									</li>
 
 									<li class="">
-										<a href="mobile-menu-1.html">
+										<a href="/ansiget/">
 											<i class="menu-icon fa fa-caret-right"></i>
-											Default Mobile Menu
+											主机信息
 										</a>
 
 										<b class="arrow"></b>
